--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.29.4",
     "js-confetti": "^0.10.2",
+    "minimist": "^1.2.6",
     "svelte-preprocess": "^4.10.2"
   }
 }
